<resources>
    <string name="app_name">Movies in the Sky</string>
    <string name="action_settings">Settings</string>
    <string name="popularity_label">Popularity</string>
    <string name="rate_label">Rate</string>
    <string name="favourite_label">Favourite</string>
    <string name="popularity_value">popular</string>
    <string name="rate_value">top_rated</string>
    <string name="favourite_value">favourite</string>
    <string name="order_by_title">Order By</string>
    <string name="pref_order_by_key">orderby</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="rate">Rate</string>
    <string name="release_date">Release Date:</string>
    <string name="trailer">Trailer:</string>
    <string name="original_title">Original Title:</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="favourite">Favourite Icon</string>
    <string name="trailer_icon">Trailer Icon</string>


    <!-- SyncAdapter related -->
    <string name="sync_account_type">moviesinthesky.sandclan.com</string>
    <string name="content_authority">br.com.sandclan.moviesinthesky.data.MovieProvider</string>
    <string name="user_reviews">User Reviews</string>

</resources>
